# soccer-sim

./: .gitignore  README.md  launchplayers.sh
player/: CMakeLists.txt  initresponse.h  main.cpp  parsehearmessages.cpp  parsehearmessages.h  parsemessages.cpp  parsemessages.h  parseseemessages.cpp  parseseemessages.h  stringutils.cpp  stringutils.h  types.cpp  types.h
player/tests/: .gitignore  CMakeLists.txt  see_test.cpp  stringutils_test.cpp
